# academicGPT

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  crud.py  db.py  main.py  models.py  openai_client.py  security.py  settings.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_project_soft_delete.py  0003_add_conversation_notes.py  0004_add_text_block_archived.py
static/css/: styles.css
templates/: base.html  conversation_detail.html  conversations.html  index.html  project.html  project_dashboard.html  project_search.html  project_settings.html  search.html
templates/search/: results.html
templates/text_blocks/: archived.html  detail.html  index.html  links.html  list.html  new.html
tests/: test_app.py
