[tool.poetry]
name = "ai-logger"
version = "0.1.0"
description = "Local web client for structured AI usage logging in academic projects."
authors = ["AI Logger Contributors"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.1", extras = ["standard"] }
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pydantic-settings = "^2.3.3"
python-multipart = "^0.0.9"
cryptography = "^42.0.8"
openai = "^1.30.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.7"

[tool.ruff]
line-length = 100

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
